tests/ui/feature-gates/feature-gate-intrinsics.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-intrinsics.rs:1:8
   |
LL | extern "crablang-intrinsic" {
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gate-intrinsics.rs:5:8
   |
LL | extern "crablang-intrinsic" fn baz() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error[E0093]: unrecognized intrinsic function: `bar`
  --> $DIR/feature-gate-intrinsics.rs:2:5
   |
LL |     fn bar();
   |     ^^^^^^^^^ unrecognized intrinsic

error: intrinsic must be in `extern "crablang-intrinsic" { ... }` block
  --> $DIR/feature-gate-intrinsics.rs:5:34
   |
LL | extern "crablang-intrinsic" fn baz() {}
   |                                  ^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0093, E0658.
For more information about an error, try `crablangc --explain E0093`.
